--- a/docs/_posts/database/2021-08-08-postgres-2.shared_buffer.md
+++ b/docs/_posts/database/2021-08-08-postgres-2.shared_buffer.md
@@ -6,6 +6,29 @@ use_math: true
 categories: [db, postgres]
 ---
 
+- [Shared Buffer 동작 원리](#shared-buffer-동작-원리)
+  - [개요](#개요)
+  - [성능 향상 위한 Shared Buffer의 3가지 목표](#성능-향상-위한-shared-buffer의-3가지-목표)
+    - [매우 큰(수십, 수백 GB) 버퍼를 빠르게 액세스](#매우-큰수십-수백-gb-버퍼를-빠르게-액세스)
+    - [많은 사용자가 동시 접근 시 경합 최소화](#많은-사용자가-동시-접근-시-경합-최소화)
+    - [자주 사용되는 블록은 최대한 오랫동안 버퍼에 생존](#자주-사용되는-블록은-최대한-오랫동안-버퍼에-생존)
+  - [Shared Buffer 구조](#shared-buffer-구조)
+    - [해시 테이블](#해시-테이블)
+      - [해시 테이블 크기와 해시 세그먼트](#해시-테이블-크기와-해시-세그먼트)
+      - [해시 테이블 크기 중간 정리](#해시-테이블-크기-중간-정리)
+    - [버퍼 파티션?](#버퍼-파티션)
+      - [버퍼 파티션 개수](#버퍼-파티션-개수)
+    - [해시 엘리먼트](#해시-엘리먼트)
+      - [구성](#구성)
+      - [엘리먼트 구성 요소](#엘리먼트-구성-요소)
+      - [엘리먼트 키 구성 요소](#엘리먼트-키-구성-요소)
+      - [`BufferTag`?](#buffertag)
+      - [해시 엘리먼트 메모리 할당 방식](#해시-엘리먼트-메모리-할당-방식)
+      - [여러 개의 `freeList`](#여러-개의-freelist)
+    - [버퍼 디스크립터](#버퍼-디스크립터)
+  - [기타](#기타)
+    - [참고 링크](#참고-링크)
+
 # Shared Buffer 동작 원리
 
 - from PostgreSQL 9.6 성능 이야기
@@ -81,6 +104,9 @@ stateDiagram-v2
 - `Segmented hash table`
   - 키를 해시해서 특정 규칙에 따라 메모리 공간에서 빠르게 찾아갈 수 있어서 읽기/쓰기에 좋다. 하지만 해시 충돌(hash colision) 발생 가능
   - 해시 충돌 완화 위해 해시 테이블을 *논리적인 N개의 세그먼트(해시 세그먼트)로 나누어서* 관리
+- 해시 테이블을
+  - 논리적으로 버퍼 파티션과 해시 세그먼트로 나눈다
+  - 각 해시 세그먼트는 256개의 버킷으로 구성된다
 
 ```mermaid
 stateDiagram-v2
@@ -261,7 +287,7 @@ init_htab(HTAB *hashp, long nelem)
     - 실제 버퍼 수보다 크게 잡는데, **해시 충돌을 피하기** 위함
   - `next_pow2_int`?
     - 입력 값보다 큰 2의 지수 값을 리턴하는 함수
-    - $next\_pow2\_int(((131,200 -1)\div{1}) + 1)$
+    - next_pow2_int$(((131,200 -1)\div{1}) + 1)$
     - `(1 << Math.log2(131200)) * 2 = 262,144` = $2^{18}$
       - 참고로 `1 << {NUM}`하면 $2^{NUM}$이 된다
   - `nelem`?
@@ -269,11 +295,12 @@ init_htab(HTAB *hashp, long nelem)
     - 버퍼 수 + `NUM_BUFFER_PARTITIONS`
     - 버퍼 수는 131,072 + NUM_BUFFER_PARTITIONS 128 = 131,200
       - 1 GiB 버퍼 수 계산법
-        - $1 GiB(= 2^{30}= 1024^{3}$) / $8 KiB(= 2^{10} = 1024^{1})$
-        - = $2^{10\times{2}} / 2^{3} = 2^{17} = 131,072$
+        - $1 GiB(= 2^{30}$) / $8 KiB(= 2^{3}\times{2^{10}} = 2^{13})$
+        - = $2^{30-13} = 2^{17} = 131,072$
   - [`ffactor`](https://www.cybertec-postgresql.com/en/what-is-fillfactor-and-how-does-it-affect-postgresql-performance/)?
-    - 이 값에 따라 버킷의 수를 결정. 2의 거듭제곱으로 증가
-    - fillfactor의 기본값은 1
+    - 이 값에 따라 버킷의 수를 결정.
+    - fillfactor의 기본값은 1() `#define DEF_FFACTOR      1`)
+      - 어디서는 기본값이 100이라고도 하는데, 이는 [테이블에 대한 fill factor](https://www.cybertec-postgresql.com/en/what-is-fillfactor-and-how-does-it-affect-postgresql-performance/)다
     - ffactor 증가 $\to$ 버킷 수 감소 $\to$ 해시 충돌 가능성 증가
     - ffactor 감소 $\to$ 버킷 수 증가 $\to$ 해시 충돌 가능성 감소(GOOD)
 - `hctl->max_bucket = hctl->low_mask = nbuckets - 1;`
@@ -289,9 +316,244 @@ init_htab(HTAB *hashp, long nelem)
 - `nsegs = next_pow2_int(nsegs);`
   - next_pow2_int(nsegs) = next_pow2_int(1024) = 1024(`1 << Math.log2(1024) = 1024`)
 
+#### 해시 테이블 크기 중간 정리
+  
+- `버퍼 수`: Share Buffer 크기에 따라 버퍼의 수가 정해지고,
+- `버킷 수`:
+  - 버퍼 수 + NUM_BUFFER_PARTITIONS와 `fill factor`로 좀 더 넉넉한 수의 버킷 수를 계산한다. 기본값은 1로 결국 할당된 버퍼 수보다 바로 다음으로 큰 2의 지수 값을 버킷 수로 정한다
+- `최대 버킷 인덱스`: 인덱스가 0부터 시작함을 감안하여 계산한 `nbuckets`(계산된 버킷 수)의 -1을 한다
+- `세그먼트 수`:
+  - (최대 버킷 인덱스 $\div$ 세그먼트의 크기) + 1
+  - 그리고 최대 버킷 수를 세그먼트 사이즈로 나누고 +1을 하여 세그먼트의 개수를 구하고, 마찬가지로 공간을 넉넉하게 잡아두기 위해 그 다음으로 큰 2의 지수 값을 구한다
+- `버퍼 수`, `버킷 수`, `세그먼트 수`를 가지고 해시 테이블 공간을 잡는다
+
+### 버퍼 파티션?
+
+- 공유 리소스:
+  - 디렉토리
+  - 해시 세그먼트
+  - 해시 테이블 등
+- `LW` 락
+  - 공유 리소스는 `Light Weight(LW)` 락을 이용해서 보호 $\to$ 여러 프로세스가 마구 접근하는 것 보호
+  - Backend 프로세스가 공유 메모리 액세스 하려면 `LW` 락을 획득 필요 $\to$ 경합 발생으로 성능 저하 가능
+  - 오라클에서는 `Latch`라고 표현한다
+- 버퍼 파티션
+  - `LW` 락 경합을 줄이기 위해 해시 테이블을 버퍼 파티션으로 나누고, 나눠진 버퍼 파티션마다 1개의 `LW` 락을 할당
+
+#### 버퍼 파티션 개수
+
+- `NUM_BUFFER_PARTITIONS`
+  - 앞서 `nelem`에서 버킷의 개수를 구할 때 사용된다
+- postgres < 9.4까지는 버퍼 파티션 수가 16개로 동시성 높은 환경에서는 버퍼 파티션 액세스 시 LW 락 경합 발생 가능성이 컸다
+- postgres >= 9.5부터는
+  - 버퍼 파티션 개수를 128개로 상향 조정
+  - 버퍼 파티션 관리하는 `LW` 락의 개수 또한 128개로 상향 조정
+
+### 해시 엘리먼트
+
+#### 구성
+
+1. 엘리먼트
+2. 엘리먼트 키
+
+#### 엘리먼트 구성 요소
+
+```c++
+/********** src/include/utils/hsearch.h **********/
+/*
+ * HASHELEMENT is the private part of a hashtable entry.  The caller's data
+ * follows the HASHELEMENT structure (on a MAXALIGN'd boundary).  The hash key
+ * is expected to be at the start of the caller's hash entry data structure.
+ */
+typedef struct HASHELEMENT
+{
+ struct HASHELEMENT *link; /* link to next entry in same bucket */
+ uint32  hashvalue;  /* hash function result for this entry */
+} HASHELEMENT;
+```
+
+- `link`: 같은 버킷의 다음 엘리먼트 가리키는 포인터
+- `hashvalue`: 이 엔트리(키/값 한 쌍)의 해시 함수 결과. `BufferTag` 이용해서 계산.
+  - `BufferTag`? 버퍼가 어떤 디스크 블록을 갖는지 식별
+
+```c++
+/********** src/backend/utils/hash/dynahash.c **********/
+/*
+ * get_hash_value -- exported routine to calculate a key's hash value
+ *
+ * We export this because for partitioned tables, callers need to compute
+ * the partition number (from the low-order bits of the hash value) before
+ * searching.
+ */
+uint32
+get_hash_value(HTAB *hashp, const void *keyPtr)
+{
+ return hashp->hash(keyPtr, hashp->keysize);
+}
+
+/********** src/backend/storage/buffer/buf_table.c **********/
+/*
+ * BufTableHashCode
+ *  Compute the hash code associated with a BufferTag
+ *
+ * This must be passed to the lookup/insert/delete routines along with the
+ * tag.  We do it like this because the callers need to know the hash code
+ * in order to determine which buffer partition to lock, and we don't want
+ * to do the hash computation twice (hash_any is a bit slow).
+ */
+uint32
+BufTableHashCode(BufferTag *tagPtr)
+{
+ return get_hash_value(SharedBufHash, (void *) tagPtr);
+}
+```
+
+#### 엘리먼트 키 구성 요소
+
+- `BufferLookupEnt`: `엘리먼트 키` = `BufferTag` 구조체 + 버퍼 디스크립터 배열 인덱스
+  - `BufferTag` 구조체: `RelFileNode` 구조체 + `forkNum` + `blockNum`
+    - `RelFileNode` 구조체: 테이블스페이스 번호 + 데이터베이스 번호 + 오브젝트 번호
+
+```c++
+/***** src/backend/storage/buffer/buf_table.c *****/
+/* entry for buffer lookup hashtable */
+typedef struct
+{
+ BufferTag key;   /* Tag of a disk page */
+ int   id;    /* Associated buffer ID */
+} BufferLookupEnt;
+
+
+/***** src/include/storage/buf_internals.h *****/
+/*
+ * Buffer tag identifies which disk block the buffer contains.
+ *
+ * Note: the BufferTag data must be sufficient to determine where to write the
+ * block, without reference to pg_class or pg_tablespace entries.  It's
+ * possible that the backend flushing the buffer doesn't even believe the
+ * relation is visible yet (its xact may have started before the xact that
+ * created the rel).  The storage manager must be able to cope anyway.
+ *
+ * Note: if there's any pad bytes in the struct, INIT_BUFFERTAG will have
+ * to be fixed to zero them, since this struct is used as a hash key.
+ */
+typedef struct buftag
+{
+ RelFileNode rnode;   /* physical relation identifier */
+ ForkNumber forkNum;
+ BlockNumber blockNum;  /* blknum relative to begin of reln */
+} BufferTag;
+
+
+/***** src/include/storage/relfilenode.h *****/
+/*
+ * RelFileNode must provide all that we need to know to physically access
+ * a relation, with the exception of the backend ID, which can be provided
+ * separately. Note, however, that a "physical" relation is comprised of
+ * multiple files on the filesystem, as each fork is stored as a separate
+ * file, and each fork can be divided into multiple segments. See md.c.
+ *
+ * spcNode identifies the tablespace of the relation.  It corresponds to
+ * pg_tablespace.oid.
+ *
+ * dbNode identifies the database of the relation.  It is zero for
+ * "shared" relations (those common to all databases of a cluster).
+ * Nonzero dbNode values correspond to pg_database.oid.
+ *
+ * relNode identifies the specific relation.  relNode corresponds to
+ * pg_class.relfilenode (NOT pg_class.oid, because we need to be able
+ * to assign new physical files to relations in some situations).
+ * Notice that relNode is only unique within a database in a particular
+ * tablespace.
+ *
+ * Note: spcNode must be GLOBALTABLESPACE_OID if and only if dbNode is
+ * zero.  We support shared relations only in the "global" tablespace.
+ *
+ * Note: in pg_class we allow reltablespace == 0 to denote that the
+ * relation is stored in its database's "default" tablespace (as
+ * identified by pg_database.dattablespace).  However this shorthand
+ * is NOT allowed in RelFileNode structs --- the real tablespace ID
+ * must be supplied when setting spcNode.
+ *
+ * Note: in pg_class, relfilenode can be zero to denote that the relation
+ * is a "mapped" relation, whose current true filenode number is available
+ * from relmapper.c.  Again, this case is NOT allowed in RelFileNodes.
+ *
+ * Note: various places use RelFileNode in hashtable keys.  Therefore,
+ * there *must not* be any unused padding bytes in this struct.  That
+ * should be safe as long as all the fields are of type Oid.
+ */
+typedef struct RelFileNode
+{
+ Oid   spcNode;  /* tablespace */
+ Oid   dbNode;   /* database */
+ Oid   relNode;  /* relation */
+} RelFileNode;
+```
+
+#### `BufferTag`?
+
+- 블록의 주민등록번호 같은 개념
+- 클러스터 데이터베이스 내에서 각 블록을 유일하게 식별할 수 있는 데이터로 구성
+  - *the BufferTag data must be sufficient to determine where to write the block*
+- 구성
+  - 유일한 오브젝트 번호
+    - `RelFileNode`: 클러스터 데이터베이스 내에서 유일한 오브젝트 번호 획득. (*must provide all that we need to know to physically access a relation*)
+  - 유일한 오브젝트 유형별 블록 번호
+    - `ForkNumber`: 오브젝트 유형
+      - 0: 테이블 또는 인덱스
+      - 1: [FSM, Free Space Map](https://www.postgresql.org/docs/13/storage-fsm.html)
+      - 2: [VM, Visibility Map](https://www.postgresql.org/docs/13/storage-vm.html)
+    - `BlockNumber`: 블록 번호
+
+#### 해시 엘리먼트 메모리 할당 방식
+
+- DB 기동 시 `버퍼 수 + NUM_BUFFER_PARTITIONS` 개의 해시 엘리먼트 배열을 미리 할당
+- 필요 시, 즉 버퍼 할당 시마다 맨 뒤에 있는 해시 엘리먼트부터 꺼내 쓰는 방식 사용
+  - 해시 엘리먼트는 맨 뒤에서부터 앞으로 링크가 연결된 구조
+- 여러 개의 `freeList`를 사용하여 해시 엘리먼트 배열 관리
+
+#### 여러 개의 `freeList`
+
+- postgres >= 9.6, 32개의 `freeList` 사용
+- `NUM_FRESSLISTS`로 설정 가능
+- 계산법
+  - Shared Buffer = 1GiB(=$2^{30}$ bytes) / 8 KiB(=$2^{3}\times{2^{10}} bytes)$ = 131,072 + `NUM_BUFFER_PARTITIONS`(=128) = 131200
+  - 131,200 / `NUM_FREELIST`(=32) = 4,100개
+
+```js
+[
+  freeList0 => [
+    [
+      el0_key,
+      el0 => [
+        el1_key,
+        el1 => [
+          /* ...4100개... */
+          el4099_key,
+          el4099
+        ]
+      ]
+    ]
+  ],
+  freeList1 => [
+
+  ],
+  /* ... */
+  freeList31 => [
+
+  ]
+]
+```
+
+### 버퍼 디스크립터
+
+- 버퍼 메타 데이터 관리 위한 구조체
+
 ## 기타
 
 ### 참고 링크
 
 - [There is always a bit of mystery around the different memory components of a PostgreSQL instance.](https://www.postgresql.fastware.com/blog/back-to-basics-with-postgresql-memory-components)
 - [A Comprehensive Guide: PostgreSQL Shared Buffers](https://postgreshelp.com/postgresql_shared_buffers/)
+- [Postgres FILLFACTOR — deep dive](https://medium.com/nerd-for-tech/postgres-fillfactor-baf3117aca0a)
