--- a/docs/_posts/database/2021-08-08-postgres-2.shared_buffer.md
+++ b/docs/_posts/database/2021-08-08-postgres-2.shared_buffer.md
@@ -513,6 +513,57 @@ typedef struct RelFileNode
   - 해시 엘리먼트는 맨 뒤에서부터 앞으로 링크가 연결된 구조
 - 여러 개의 `freeList`를 사용하여 해시 엘리먼트 배열 관리
 
+```c++
+/***** src/backend/utils/hash/dynahash.c *****/
+/*
+ * Per-freelist data.
+ *
+ * In a partitioned hash table, each freelist is associated with a specific
+ * set of hashcodes, as determined by the FREELIST_IDX() macro below.
+ * nentries tracks the number of live hashtable entries having those hashcodes
+ * (NOT the number of entries in the freelist, as you might expect).
+ *
+ * The coverage of a freelist might be more or less than one partition, so it
+ * needs its own lock rather than relying on caller locking.  Relying on that
+ * wouldn't work even if the coverage was the same, because of the occasional
+ * need to "borrow" entries from another freelist; see get_hash_entry().
+ *
+ * Using an array of FreeListData instead of separate arrays of mutexes,
+ * nentries and freeLists helps to reduce sharing of cache lines between
+ * different mutexes.
+ */
+typedef struct
+{
+ slock_t  mutex;   /* spinlock for this freelist */
+ long  nentries;  /* number of entries in associated buckets */
+ HASHELEMENT *freeList;  /* chain of free elements */
+} FreeListData;
+
+/*
+ * Header structure for a hash table --- contains all changeable info
+ *
+ * In a shared-memory hash table, the HASHHDR is in shared memory, while
+ * each backend has a local HTAB struct.  For a non-shared table, there isn't
+ * any functional difference between HASHHDR and HTAB, but we separate them
+ * anyway to share code between shared and non-shared tables.
+ */
+struct HASHHDR
+{
+ /*
+  * The freelist can become a point of contention in high-concurrency hash
+  * tables, so we use an array of freelists, each with its own mutex and
+  * nentries count, instead of just a single one.  Although the freelists
+  * normally operate independently, we will scavenge entries from freelists
+  * other than a hashcode's default freelist when necessary.
+  *
+  * If the hash table is not partitioned, only freeList[0] is used and its
+  * spinlock is not used at all; callers' locking is assumed sufficient.
+  */
+ FreeListData freeList[NUM_FREELISTS];
+ /* 이하 생략 */
+}
+```
+
 #### 여러 개의 `freeList`
 
 - postgres >= 9.6, 32개의 `freeList` 사용
@@ -525,23 +576,24 @@ typedef struct RelFileNode
 [
   freeList0 => [
     [
-      el0_key,
-      el0 => [
-        el1_key,
-        el1 => [
-          /* ...4100개... */
-          el4099_key,
-          el4099
-        ]
+      el4099_key,
+      el4099 => [
+        /* ...4100개... */
+        el0_key,
+        el0
       ]
     ]
   ],
-  freeList1 => [
-
-  ],
-  /* ... */
+  /* ...32개... */
   freeList31 => [
-
+    [
+      el4099_key,
+      el4099 => [
+        /* ...4100개... */
+        el0_key,
+        el0
+      ]
+    ]
   ]
 ]
 ```
