--- a/docs/_posts/database/2021-08-08-postgres-2.shared_buffer.md
+++ b/docs/_posts/database/2021-08-08-postgres-2.shared_buffer.md
@@ -338,7 +338,7 @@ init_htab(HTAB *hashp, long nelem)
   - Backend 프로세스가 공유 메모리 액세스 하려면 `LW` 락을 획득 필요 $\to$ 경합 발생으로 성능 저하 가능
   - 오라클에서는 `Latch`라고 표현한다
 - 버퍼 파티션
-  - `LW` 락 경합을 줄이기 위해 해시 테이블을 버퍼 파티션으로 나누고, 나눠진 버퍼 파티션마다 1개의 `LW` 락을 할당
+  - `LW` 락 경합을 줄이기 위해 해시 테이블을 버퍼 파티션으로 나누고, 나눠진 **버퍼 파티션마다 1개의 `LW` 락**을 할당
 
 #### 버퍼 파티션 개수
 
@@ -512,6 +512,7 @@ typedef struct RelFileNode
 - 필요 시, 즉 버퍼 할당 시마다 맨 뒤에 있는 해시 엘리먼트부터 꺼내 쓰는 방식 사용
   - 해시 엘리먼트는 맨 뒤에서부터 앞으로 링크가 연결된 구조
 - 여러 개의 `freeList`를 사용하여 해시 엘리먼트 배열 관리
+  - 여러 프로세스에서 동시에 버퍼 요청 시 병목 발생하여 성능 저하됐었기 때문
 
 ```c++
 /***** src/backend/utils/hash/dynahash.c *****/
