--- a/docs/_posts/algorithms/2021-08-18-APSS-4.3-moving_average.md
+++ b/docs/_posts/algorithms/2021-08-18-APSS-4.3-moving_average.md
@@ -97,5 +97,5 @@ public double[] second(double[] A, int M) {
 - 이동평균선의 개념을 생각했을 때는 중첩 반복문 방식으로 짜기 쉽다.
   - N개의 요소들이 있을 때 각 요소를 기준으로 마지막(이전) M개만큼의 평균을 구하는 것이기 때문이다.
   - *M개만큼의 평균을 구한다*고 생각했을 때 일반적으로 M개를 더해서 M으로 나눈다고 생각하기 쉽다.
-  - *평균*이란 단어를 너무 협소하게 생각하는 거 같다. M개를 더해서 M으로 나누는 것이 평균이지만, M개를 더한 값을 M으로 나누는 것도 평균이다.
+  - *평균*이란 단어를 너무 협소하게 생각하는 거 같다. M개를 다 더해서 M으로 나누는 것이 평균이지만, 매번 M개를 다 더하는 과정이 필수는 아니다. 어쨌든 다 더해진 M개를 M으로 나누는 것이 평균이다.
 - 괜히 범위 지정을 잘못해서 계산이 잘못되지 않을까 우려 되기도 하지만, 이는 점화식을 만드는 능력이 부족해서 그런 거 같다. 가급적 점화식을 만들어서 알고리즘을 짜는 연습을 하자.
