--- a/docs/_posts/algorithms/2021-08-18-APSS-4.3.moving_average.md
+++ b/docs/_posts/algorithms/2021-08-18-APSS-4.3.moving_average.md
@@ -3,7 +3,7 @@ title: ASPP - 4.3.이동평균선
 author: aimpugn
 date: 2021-08-18 00:00:00+0900
 use_math: true
-categories: [APSS], algorithms]
+categories: [APSS, algorithms]
 ---
 
 # 개요
