--- a/docs/_posts/algorithms/2021-08-19-APSS-4.6.max_sum.md
+++ b/docs/_posts/algorithms/2021-08-19-APSS-4.6.max_sum.md
@@ -6,6 +6,14 @@ use_math: true
 categories: [APSS, algorithms]
 ---
 
+- [개요](#개요)
+  - [풀이법](#풀이법)
+    - [브루트 포스: $O(N^{3})$](#브루트-포스-on3)
+    - [$O(N^{2})$](#on2)
+    - [분할 정복: $O(N\log{N})$](#분할-정복-onlogn)
+    - [동적 계획법: $O(N)$](#동적-계획법-on)
+  - [비교](#비교)
+
 # 개요
 
 - 부분 구간 중 그 합이 최대인 구간을 찾는 문제
