--- a/docs/_posts/algorithms/2021-08-19-APSS-4.6.max_sum.md
+++ b/docs/_posts/algorithms/2021-08-19-APSS-4.6.max_sum.md
@@ -49,7 +49,7 @@ public int inefficientMaxSum(int[] A) {
 ```
 
 - $O(N^{2})$ 개의 가능한 구간 검사 $\times$ $O(N)$ 구간 합 = $O(N^{3})$
-- 하지만 굳이 반복문을 돌면서 합을 구할 필요가 있을까? [이동평균선](../algorithms/2021-08-18-APSS-4.2.moving_average.md)처럼 반복문 하나를 줄일 수 있다.
+- 하지만 굳이 반복문을 돌면서 합을 구할 필요가 있을까? [이동평균선](../algorithms/2021-08-18-APSS-4.2.moving_average)처럼 반복문 하나를 줄일 수 있다.
 
 ### $O(N^{2})$
 
