pgsql shared buffer 공부

--- a/docs/_posts/database/2021-08-08-postgres-2.shared_buffer.md
+++ b/docs/_posts/database/2021-08-08-postgres-2.shared_buffer.md
@@ -120,9 +120,10 @@ stateDiagram-v2
 - `Segmented hash table`
   - 키를 해시해서 특정 규칙에 따라 메모리 공간에서 빠르게 찾아갈 수 있어서 읽기/쓰기에 좋다. 하지만 해시 충돌(hash colision) 발생 가능
   - 해시 충돌 완화 위해 해시 테이블을 *논리적인 N개의 세그먼트(해시 세그먼트)로 나누어서* 관리
-- 해시 테이블을
-  - 논리적으로 버퍼 파티션과 해시 세그먼트로 나눈다
-  - 각 해시 세그먼트는 256개의 버킷으로 구성된다
+- 해시 테이블을 논리적으로
+  - `버퍼 파티션`과
+  - `해시 세그먼트`로 나눈다
+    - 각 `해시 세그먼트`는 256개의 `버킷`으로 구성된다
 
 ```mermaid
 stateDiagram-v2
