--- a/docs/_posts/database/2021-08-08-postgres-2.shared_buffer.md
+++ b/docs/_posts/database/2021-08-08-postgres-2.shared_buffer.md
@@ -156,7 +156,7 @@ stateDiagram-v2
 - `Directory`?
   - 논리적으로 나눈 N개의 세그먼트의 각 시작 위치를 가리키는 별도의 배열 필요한데, 이 배열을 디렉토리라 한다
   - 기본값 설정은 256
-  - `shared_buffer`를 크게 설정한 경우 디렉코리 크기 증가
+  - `shared_buffer`를 크게 설정 $\to$ 버퍼 증가 $\to$ 버킷 증가 $\to$ 해시 세그먼트 증가 $\to$ 디렉토리 크기 증가
 - `해시 세그먼트`?
   - 해시 테이블을 논리적으로 나누는 단위
   - 256개의 버킷으로 구성
